added facebook link and icon to footer

--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
     <main>Main content</main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" arial-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </footer>
+
+    <!--Font awesome icon kit-->
+    <script src="https://kit.fontawesome.com/c6da0d4238.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
