--- a/gallery.html
+++ b/gallery.html
@@ -31,8 +31,8 @@
         </label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="gallery.html" class="active">Gallery</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
@@ -61,7 +61,7 @@
             </li>
             <li>
                 <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                     aria-label="Visit our Instagram page (opens in a new tab)")>
+                    aria-label="Visit our Instagram page (opens in a new tab)")>
                  <i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
