--- a/signup.html
+++ b/signup.html
@@ -31,9 +31,9 @@
         </label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
     </header>
@@ -56,12 +56,12 @@
             </li>
             <li>
                 <a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Youtube page (opens in a new tab)")>
+                     aria-label="Visit our Youtube page (opens in a new tab)")>
                  <i class="fa-brands fa-square-youtube"></i></a>
             </li>
             <li>
                 <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                     aria-label="Visit our Instagram page (opens in a new tab)")>
+                    aria-label="Visit our Instagram page (opens in a new tab)")>
                  <i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
