--- a/index.html
+++ b/index.html
@@ -46,70 +46,71 @@
                 <h3>Dublin Docklands & Phoenix Park</h3>
             </div>
         </section>
-
-        <!-- Reasons Section -->
-         <section id="reasons">
-            <h2>Why Love Running With Us?</h2>
+        <section id="reasons">
+            <h2>Why love running with us?</h2>
             <div id="benefits">
-
                 <div id="benefits-physical">
                     <div>
-                        <h3>Feel Healthy <i class="fa-solid fa-heartbeat"></i></h3>
+                        <h3>Feel healthy <i class="fa-solid fa-heart-pulse"></i></h3>
                         <hr>
-                        <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns calories and can build strength.</p>
+                        <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular
+                            health. Plus, it burns calories and can build strength.</p>
                     </div>
                     <div>
-                        <h3>Feel Strong <i class="fa-solid fa-dumbbell"></i></h3>
+                        <h3>Feel strong <i class="fa-solid fa-dumbbell"></i></h3>
                         <hr>
                         <p>Running strengthens your heart by pumping blood more effectively through your body.</p>
                     </div>
                 </div>
-
-                <div id="benefits-phyiscal">
+                <div id="benefits-mental">
                     <div>
-                        <h3>FEEL FREE <i class="fa-brands fa-fly"></i></h3>
+                        <h3>Feel free <i class="fa-brands fa-fly"></i></h3>
                         <hr>
-                        <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic, more awake and, yes, happier.</p>
+                        <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins
+                            make you more energetic, more awake and, yes, happier.</p>
                     </div>
                     <div>
-                        <h3>GET SOCIAL <i class="fa-solid fa-globe"></i></h3>
+                        <h3>Get social <i class="fa-solid fa-globe"></i></h3>
                         <hr>
-                        <p>When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, and inspire you to try new events.</p>
+                        <p>When we run with others, we can run farther and faster more easily. Social running can pull
+                            you out of a running funk or low mood, and inspire you to try new events.</p>
                     </div>
                 </div>
+                <div id="benefits-image">
+                    <div id="circle-cover-bg"></div>
+                </div>
             </div>
-         </section>
+        </section>
     </main>
 
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" 
-                    arial-label="Visit our Facebook page (opens in a new tab)">
-                <i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://www.x.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our X page (opens in a new tab)")>
-                <i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
             </li>
             <li>
                 <a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Youtube page (opens in a new tab)")>
-                 <i class="fa-brands fa-square-youtube"></i></a>
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
             </li>
             <li>
                 <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                     aria-label="Visit our Instagram page (opens in a new tab)")>
-                 <i class="fa-brands fa-instagram"></i></a>
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
-
     </footer>
 
-    <!--Font awesome icon kit-->
-    <script src="https://kit.fontawesome.com/c6da0d4238.js" crossorigin="anonymous"></script>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
