--- a/index.html
+++ b/index.html
@@ -86,40 +86,7 @@
          <section id="meetups">
             <h2>Meet-up Times</h2>
             
-            <div id="times">
 
-                <div>
-                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
-                    <p>Monday</p>
-                    <p>5K</p>
-                    <p>The Marker Hotel</p>
-                    <p>18:30</p>
-
-                <div>
-                    <h3>Trail <i class="fa-solid fa-tree"></i></h3>
-                    <p>Wednesday</p>
-                    <p>10K</p>
-                    <p>The Phoenix Park</p>
-                    <p>18:30</p>
-                </div>
-
-                <div>
-                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
-                    <p>Friday</p>
-                    <p>5K</p>
-                    <p>The Marker Hotel</p>
-                    <p>18:30</p>
-                </div>
-
-                 <div>
-                    <h3>Trail <i class="fa-solid fa-tree"></i></h3>
-                    <p>Saturday</p>
-                     <p>10K</p>
-                     <p>The Phoenix Park</p>
-                     <p>09:30</p>
-                 </div>
-
-                 <div>
                     <h3>Coffee <i class="fa-solid fa-mug-hot"></i></h3>
                     <p>Sunday</p>
                     <p>0K</p>
@@ -127,17 +94,51 @@
                     <p>11:30</p>
                 </div>
 
-                <div>
-                     <h3></h3>
-                     <p></p>
-                     <p></p>
-                     <p></p>
-                     <p></p>
-                </div>
-
                 </div>
             </div>
 
+         </section>
+        <!-- Meetup times section -->
+         <section id="meetups">
+            <h2>Meet-up Times</h2>
+            <div id="times">
+                <div>
+                    <h3>Urban</h3>
+                    <p>Monday</p>
+                    <p>5K</p>
+                    <p>The Marker Hotel</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>Trail</h3>
+                    <p>Wednesday</p>
+                    <p>10K</p>
+                    <p>The Phoenix Park</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>Urban</h3>
+                    <p>Friday</p>
+                    <p>5K</p>
+                    <p>The Marker Hotel</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>Trail</h3>
+                    <p>Saturday</p>
+                    <p>10K</p>
+                    <p>The Phoenix Park</p>
+                    <p>09:30</p>
+                </div>
+                <div>
+                    <h3>Coffee</h3>
+                    <p>Sunday</p>
+                    <p>0K</p>
+                    <p>The Marker Hotel</p>
+                    <p>11:30</p>
+                </div>
+            </div>
+            
          </section>
     </main>
 
