--- a/index.html
+++ b/index.html
@@ -84,24 +84,8 @@
 
         <!-- Meetup times section -->
          <section id="meetups">
-            <h2>Meet-up Times</h2>
-            
 
-                    <h3>Coffee <i class="fa-solid fa-mug-hot"></i></h3>
-                    <p>Sunday</p>
-                    <p>0K</p>
-                    <p>The Marker Hotel</p>
-                    <p>11:30</p>
-                </div>
-
-                </div>
-            </div>
-
-         </section>
-        <!-- Meetup times section -->
-         <section id="meetups">
-
-            <h2>Meet-up Times</h2>
+            <h2 class="hidden-heading">Meet-up Times</h2>
 
             <div id="times">
 
