--- a/signup.html
+++ b/signup.html
@@ -40,7 +40,7 @@
 
     <!-- Main content -->
     <main>
-        <section id="signup">#
+        <section id="signup">
             <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
             <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
                 <label for="first-name">First Name</label>
@@ -52,7 +52,7 @@
                 <label for="email-address">Email Address</label>
                 <input type="email" name="email_address" id="email-address" class="text-input" required>
                 <br>
-                <div id="radio-buttons">
+                <div class="radio-buttons">
                     <div>
                         <label for="road">Road</label>
                         <input type="radio" name="running_preference" id="road" value="road" required checked>
