--- a/gallery.html
+++ b/gallery.html
@@ -41,6 +41,7 @@
     <!-- Main content -->
     <main>
         <section id="gallery">
+            <h2 class="hidden-heading">Gallery</h2>
             <div id="photos">
                 <img src="assets/images/athletes.webp" alt="Two athletes running together">
                 <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
@@ -61,31 +62,30 @@
     <footer>
         <ul id="social-networks">
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" 
-                    arial-label="Visit our Facebook page (opens in a new tab)">
-                <i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://www.x.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our X page (opens in a new tab)")>
-                <i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
             </li>
             <li>
                 <a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Youtube page (opens in a new tab)")>
-                 <i class="fa-brands fa-square-youtube"></i></a>
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
             </li>
             <li>
                 <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)")>
-                 <i class="fa-brands fa-instagram"></i></a>
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
-
     </footer>
 
-    <!--Font awesome icon kit-->
-    <script src="https://kit.fontawesome.com/c6da0d4238.js" crossorigin="anonymous"></script>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
