adjusted all html and css

--- a/signup.html
+++ b/signup.html
@@ -42,7 +42,7 @@
     <main>
         <section id="signup">
             <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
-            <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
+                <h2><i class="fa-solid fa-heartbeat"></i> Let's get you signed up!</h2>
                 <label for="first-name">First Name</label>
                 <input type="text" name="first_name" id="first-name" class="text-input" required>
                 <br>
@@ -59,11 +59,11 @@
                     </div>
                     <div>
                         <label for="trail">Trail</label>
-                        <input type="radio" name="running_preference" id="trail" value="trail" required checked>
+                        <input type="radio" name="running_preference" id="trail" value="trail" required>
                     </div>
                     <div>
                         <label for="both">Both</label>
-                        <input type="radio" name="running_preference" id="both" value="both" required checked>
+                        <input type="radio" name="running_preference" id="both" value="both" required>
                     </div>
                 </div>
                 <button type="submit" class="join-button">Let's Run!</button>
@@ -75,31 +75,30 @@
     <footer>
         <ul id="social-networks">
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" 
-                    arial-label="Visit our Facebook page (opens in a new tab)">
-                <i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://www.x.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our X page (opens in a new tab)")>
-                <i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
             </li>
             <li>
                 <a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                     aria-label="Visit our Youtube page (opens in a new tab)")>
-                 <i class="fa-brands fa-square-youtube"></i></a>
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
             </li>
             <li>
                 <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)")>
-                 <i class="fa-brands fa-instagram"></i></a>
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
-
     </footer>
 
-    <!--Font awesome icon kit-->
-    <script src="https://kit.fontawesome.com/c6da0d4238.js" crossorigin="anonymous"></script>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
