--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -40,12 +41,15 @@
 
     <!-- Main content -->
     <main>
+        <!-- Hero section -->
         <section id="hero">
             <div id="cover-text">
                 <h2>Love Running</h2>
                 <h3>Dublin Docklands & Phoenix Park</h3>
             </div>
         </section>
+
+        <!-- Reasons section -->
         <section id="reasons">
             <h2>Why love running with us?</h2>
             <div id="benefits">
@@ -83,12 +87,9 @@
         </section>
 
         <!-- Meetup times section -->
-         <section id="meetups">
-
+        <section id="meetups">
             <h2 class="hidden-heading">Meet-up Times</h2>
-
             <div id="times">
-
                 <div>
                     <h3>Urban <i class="fa-solid fa-city"></i></h3>
                     <p>Monday</p>
@@ -96,7 +97,6 @@
                     <p>The Marker Hotel</p>
                     <p>18:30</p>
                 </div>
-
                 <div>
                     <h3>Trail <i class="fa-solid fa-tree"></i></h3>
                     <p>Wednesday</p>
@@ -104,7 +104,6 @@
                     <p>The Phoenix Park</p>
                     <p>18:30</p>
                 </div>
-
                 <div>
                     <h3>Urban <i class="fa-solid fa-city"></i></h3>
                     <p>Friday</p>
@@ -112,7 +111,6 @@
                     <p>The Marker Hotel</p>
                     <p>18:30</p>
                 </div>
-
                 <div>
                     <h3>Trail <i class="fa-solid fa-tree"></i></h3>
                     <p>Saturday</p>
@@ -120,7 +118,6 @@
                     <p>The Phoenix Park</p>
                     <p>09:30</p>
                 </div>
-
                 <div>
                     <h3>Coffee <i class="fa-solid fa-mug-hot"></i></h3>
                     <p>Sunday</p>
@@ -128,10 +125,8 @@
                     <p>The Marker Hotel</p>
                     <p>11:30</p>
                 </div>
-                
             </div>
-
-         </section>
+        </section>
     </main>
 
     <!-- Footer -->
